<resources>
    <string name="app_name">TipCalculator123</string>
    <string name="label_tip">Tip ($)</string>
    <string name="label_total">Total</string>
    <string name="label_bill">Bill</string>
    <string name="amount_bill_hint">____________</string>
    <string name="label_tip_percent">Tip (%)</string>
    <string name="amount_tip_percent_hint">________________</string>
    <string name="button_calculator">CALCULATE</string>
</resources>
