<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cecs453assignment1_tipcalculator.MainActivity">
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/label_bill"
        style="@style/LabelStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:minWidth="120dp"
        android:text="@string/label_bill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- red line -->
    <EditText
        android:id="@+id/amount_bill"
        style="@style/InputStyle"
        android:layout_width="252dp"
        android:layout_height="56dp"
        android:layout_marginRight="20dp"
        android:hint="@string/amount_bill_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/label_bill"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toRightOf="@+id/label_bill"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/label_tip_percent"
        style="@style/LabelStyle"
        android:layout_width="119dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_tip_percent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/label_bill"
        app:layout_constraintRight_toRightOf="@+id/label_bill"
        app:layout_constraintTop_toBottomOf="@+id/label_bill" />

    <EditText
        android:id="@+id/amount_tip_percent"
        style="@style/InputStyle"
        android:layout_width="255dp"
        android:layout_height="63dp"
        android:hint="@string/amount_tip_percent_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/label_tip_percent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/label_tip_percent"
        app:layout_constraintRight_toRightOf="@id/amount_bill" />

    <View
        android:id="@+id/red_line"
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_marginTop="20dp"
        android:background="#FF00"
        app:layout_constraintLeft_toLeftOf="@id/label_bill"
        app:layout_constraintRight_toRightOf="@id/amount_bill"
        app:layout_constraintTop_toBottomOf="@+id/label_tip_percent" />

    <TextView
        android:id="@+id/label_tip"
        style="@style/LabelStyle"
        android:layout_width="83dp"
        android:layout_height="53dp"
        android:layout_marginTop="20dp"
        android:text="@string/label_tip"
        app:layout_constraintLeft_toLeftOf="@+id/label_bill"
        app:layout_constraintRight_toRightOf="@+id/label_bill"
        app:layout_constraintTop_toBottomOf="@id/red_line" />

    <TextView
        android:id="@+id/amount_tip"
        style="@style/OutputStyle"
        android:layout_width="272dp"
        android:layout_height="53dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_tip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/label_tip"
        app:layout_constraintRight_toRightOf="@id/amount_bill" />

    <TextView
        android:id="@+id/label_total"
        style="@style/LabelStyle"
        android:layout_marginTop="20dp"
        android:text="@string/label_total"
        app:layout_constraintLeft_toLeftOf="@+id/label_bill"
        app:layout_constraintRight_toRightOf="@+id/label_bill"
        app:layout_constraintTop_toBottomOf="@id/label_tip" />

    <TextView
        android:id="@+id/amount_total"
        style="@style/OutputStyle"
        android:layout_width="273dp"
        android:layout_height="58dp"
        app:layout_constraintBottom_toBottomOf="@+id/label_total"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/label_total"
        app:layout_constraintRight_toRightOf="@id/amount_bill" />

</androidx.constraintlayout.widget.ConstraintLayout>